deploy/openshift/overlays/dev/spring-api-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-api
spec:
  template:
    spec:
      imagePullSecrets:
        - name: company-ci-registry
      containers:
        - name: spring-api
          imagePullPolicy: Always
