deploy/openshift/overlays/dev/next-web-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: next-web
spec:
  to:
    kind: Service
    name: next-web
  port:
    targetPort: http
