deploy/openshift/overlays/dev/spring-api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-api
spec:
  to:
    kind: Service
    name: spring-api
  port:
    targetPort: http
